# z4ai

./: .gitignore  CONTRIBUTING.md  MANIFEST.in  NOTICE  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  docs.yml  draft-pdf.yml  release.yml
benchmarks/: _data.py  ablation.py  bench_chunked.py  bench_max_ratio.py  bench_native_codec.py  bench_palette.py  bench_real_checkpoint.py  bench_safetensors.py  bench_sparse.py  bench_structured.py  bench_tied_embedding.py  bench_turbo.py  benchmark.py  benchmark_real.py  benchmark_scenarios.py  checkpoint_bench.py  fair_benchmark.py  production_bench.py  real_model.py  research_headtohead.py  scenarios.py  turbo_prototype.py  verify_vs_zipnn.py  zipnn_adapter.py
docs/: api.md  background.md  cli.md  conf.py  howitworks.md  index.md  installation.md  quickstart.md  requirements.txt  usage.md
docs/_static/: custom.css
paper/: make_pipeline_figure.py  paper.bib  paper.md  z4ai-arxiv.md  z4ai-arxiv.tex
tests/: conftest.py  test_accel.py  test_auto.py  test_bf16_decode_pref.py  test_bitfield.py  test_block_decode_tolerance.py  test_block_parallel_fuzz.py  test_chunked.py  test_cli.py  test_cli_entrypoint.py  test_data.py  test_delta.py  test_effort_fast_decode.py  test_effort_max.py  test_integrations_hf.py  test_large_structured_ratio.py  test_ldm_regression.py  test_max_ratio_mode.py  test_model_delta.py  test_native_bf16.py  test_native_codec.py  test_no_expansion.py  test_opaque_path.py  test_palette.py  test_rans.py  test_roundtrip.py  test_safetensors.py  test_sparse.py  test_structured.py  test_structured_win.py  test_turbo.py  test_turbo_deep_repeat_probe.py
z4ai/: __init__.py  __main__.py  _accel.py  _native_codec.c  _native_shuffle.c  auto.py  backend.py  bitfield.py  build_native.py  chunked.py  cli.py  codec.py  delta.py  dtypes.py  format.py  integrations.py  model_delta.py  palette.py  rans.py  rans_o1.py  safetensors.py  sparse.py  transforms.py  turbo.py
z4ai/_native/: rans.c
